<resources>
    <string name="app_name">Choices</string>

    <string name="boring_1">结果出现的时候</string>
    <string name="boring_2">你将知道</string>
    <string name="boring_3">自己内心的答案</string>

    <string name="two_1">已知选项</string>
    <string name="two_2">未知选项</string>
    <string name="two_3">历史记录</string>

    <string name="known_1">你面临什么选择？</string>
    <string name="known_2">如：下午吃什么？</string>
    <string name="known_3">你有几个可选选项？</string>
    <string name="known_4">请输入选项的个数</string>

    <string name="detail_1">请输入选项:</string>
    <string name="detail_list_1">选项</string>
    <string name="detail_list_n">如：吃食堂</string>

    <string name="menu_1">首页</string>
    <string name="menu_2">新的选择</string>
    <string name="menu_3">历史记录</string>
    <string name="menu_4">退出</string>

    <string name="input">0123456789</string>

    <string name="fragment_slide">（请滑动）</string>

    <string name="fragment11">已知选项</string>
    <string name="fragment12">根据已知任务和选项，帮你做出选择</string>


    <string name="fragment21">未知选项</string>
    <string name="fragment22">根据未知任务，随机帮你做出选择</string>

    <string name="fragment31">历史记录</string>
    <string name="fragment32">记录你做过的选择</string>

    <string name="btn_pages">开始使用</string>


</resources>
