<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_index"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_choice"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_record"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_4"
        app:showAsAction="never" />

</menu>