<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment31"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/fragment32" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/record" />
    <Button
        android:id="@+id/btn_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:onClick="onClick"
        android:padding="30dp"
        android:textColor="@color/secondary_text"
        android:textSize="22sp"
        android:text="@string/btn_pages" />


</FrameLayout>